--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,10 +28,33 @@
             "miDebuggerPath": "/usr/bin/gdb"
         },
         {
-            "name": "debug tests gdb",
+            "name": "debug tests_i gdb",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/tests",
+            "program": "${workspaceFolder}/bin/tests_i",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "text": "set args ${input:gdb-debugger-args}"
+                }
+            ],
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "debug tests_ip gdb",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bin/tests_ip",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
